--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,8 @@
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "mysql2": "^3.16.1",
-    "nodemailer": "^8.0.1"
+    "nodemailer": "^8.0.1",
+    "pino": "^10.3.0",
+    "pino-pretty": "^13.1.3"
   }
 }
