--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha src/test/**/*.js"
+
   },
   "keywords": [],
   "author": "",
@@ -18,7 +19,13 @@
     "jsonwebtoken": "^9.0.3",
     "mysql2": "^3.16.1",
     "nodemailer": "^8.0.1",
+    "nodemon": "^3.1.11",
     "pino": "^10.3.0",
     "pino-pretty": "^13.1.3"
+  },
+  "devDependencies": {
+    "chai": "^6.2.2",
+    "mocha": "^11.7.5",
+    "supertest": "^7.2.2"
   }
 }
